Fixed z-index issue on draw page

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -20,6 +20,7 @@
     background-color: #fff;
     text-align: center;
     padding: 20px 0;
+    z-index: 10;
 }
 
 .timer {
